fix: remove overflow value from collapsible header

--- a/components/molecules/CollapsibleHeader/styles.module.scss
+++ b/components/molecules/CollapsibleHeader/styles.module.scss
@@ -15,5 +15,4 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr;
-  overflow-x: hidden;
 }
